2013-10-04 arnaud.fontaine
* ZODB Components: Rename common view to ComponentMixin_view (naming conventions and clash with erp5_pdm).

2013-10-03 arnaud.fontaine
* erp5_core: Cosmetic: Get rid of a pylint warning.

2013-10-03 arnaud.fontaine
* erp5_core: A function was renamed but some code has not been updated accordingly (24ccf35).

2013-10-17 tatuya
* Add {source,destination}_{decision,carrier,section}_administration categories.

2013-09-08 arnaud.fontaine
* ZODB Components: Revert 'Allow to execute runUnitTest for bt5 Test Components' to fix tests bootstrap.

2013-09-03 arnaud.fontaine
* ZODB Components: Workflow History must always be kept, so avoid an extra step for developers.

2013-08-28 arnaud.fontaine
* ZODB Components: Migrate Documents, Extensions and Tests.

2013-08-23 arnaud.fontaine
* ZODB Components: Shorten ID by removing common erp5.component prefix.

2013-08-20 arnaud.fontaine
* ZODB Components: Add field to specify the object paths whose only last workflow history must be kept.

2013-08-20 arnaud.fontaine
* ZODB Components: ID and Reference may be quite long so make fields wider in Component_view.

2013-08-15 arnaud.fontaine
* ZODB Components: Add pylint support and use a property for error message rather than workflow variable (error messages are now reported everytime the source code is changed).

2013-07-19 arnaud.fontaine
* Add save button to Ace Editor to save source code while staying on the same page.

2013-07-09 arnaud.fontaine
* ZODB COmponents: Cosmetic: Fix Component Validation Workflow description.

2013-07-09 arnaud.fontaine
* ZODB Components: Only Developer Role must be able to invalidate/delete/validate Components.

2013-07-04 arnaud.fontaine
* ZODB Components: Version was not displayed properly in Component view.

2013-07-04 arnaud.fontaine
* ZODB Components: Do not always display bt5 Migrate Action.

2013-06-26 arnaud.fontaine