@@ -1,3 +1,6 @@
+2013-11-07 tatuya
+* Naming Convention: Add test for Form IDs.
+
 2013-10-04 arnaud.fontaine
 * ZODB Components: Rename common view to ComponentMixin_view (naming conventions and clash with erp5_pdm).
 
